package com.directi.training.dip.exercise_refactored;


public interface IDatabase {
    void write(String data);
}